--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,4 +195,37 @@ a {
         list-style-type: none;
         margin-right: 10px;
     }
+
+    
+    /*home page */
+
+.hero-banner {
+    width: 100%;
+    height: 100px;
+    background-image: url('../images/Webp.net-resizeimage\ \(16\).jpg');
+    background-size: contain;
+}
+
+
+.link_container {
+    width: 100px;
+    height: 100px;
+    border-style: solid;
+    border-color: #B7A354;
+    border-width: 5px;
+    border-radius: 50%;
+    float: left;
+    margin: 5px 5px 10px;
+    justify-content: center;
+    display:flex;
+    align-items: center;
+    text-align: center;
+}
+
+.link_container > a > h3 {
+    color: #fff;
+    font-size: 100%;
+ }
+    
+}
 }
