--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,10 +168,22 @@ a {
     position: relative;
     float: left;
     clear: both;
+    margin-left: 10px;
+    
 }
 
 .client-details {
+    font-size: 110%;
+}
 
+input {
+    margin-left: 0px;
+    margin-bottom: 0px;
+     border-radius: 2px;
+    border: 2px solid #777;
+    box-sizing: border-box;
+    width: auto;
+    padding: 10px;
 }
 /* social networks */
 .social-networks {
