--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,22 +168,39 @@ a {
     position: relative;
     float: left;
     clear: both;
-    margin-left: 10px;
-    
+    margin-left: 10px;    
 }
 
 .client-details {
     font-size: 110%;
+    text-align:center;
 }
 
 input {
-    margin-left: 0px;
-    margin-bottom: 0px;
-     border-radius: 2px;
+     margin-bottom:10px;
+    border-radius: 50px;
     border: 2px solid #777;
     box-sizing: border-box;
     width: auto;
-    padding: 10px;
+    padding: 5px;
+}
+
+button {
+    margin-top:10px;
+    border-radius: 50px;
+    border: 2px solid #777;
+    padding:5px;
+    background-color:#B7A354; 
+    color: #fff
+}
+
+button:hover {
+    margin-top:10px;
+    border-radius: 50px;
+    border: 2px solid #777;
+    padding:5px;
+    background-color:#a4c558; 
+    color: #fff  ;
 }
 /* social networks */
 .social-networks {
