add style to media 950 down for booking form and image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,5 +295,16 @@ button:hover {
     color: #fff;
     font-size: 100%;
  }
+
+ form {
+    width: 100%;
+    margin-bottom:10px;
+}
+
+
+#booking-image {
+   width:100%;
+   margin-right: 0px;
+}
     
 }
