--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,15 @@ button:hover {
     padding: 10px 30px 10px;
 }
 
+#about-namibia-image{
+    width:100%;
+    height:30%;
+    margin-bottom: 10px;
+}
+
+#Namibia-image {
+    margin: 0 auto;
+}
 /* social networks */
 .social-networks {
     text-align: center;
