add style to thank you page and update form method

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,13 @@ button:hover {
     margin-bottom: 10px;
 }
 
+/* Thank you */
+#thank-you-text{
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+}
+
 /* social networks */
 .social-networks {
     text-align: center;
