--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ footer {
 .hero-banner {
     width: 100%;
     height: 200px;
-    background-image: url('../images/Webp.net-resizeimage\ \(16\).jpg');
+    background-image: url('../images/banner.jpg');
     background-size: contain;
     animation: slide 20s linear infinite;
 }
