update img names

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,17 +123,17 @@ a {
 }
 
 #right_contianer {
-    background-image: url('../images/Webp.net-resizeimage\ \(5\).jpg');
+    background-image: url('../images/himba.jpg');
     background-size: cover;
 }
 
 #center_contianer {
-    background-image: url('../images/13131212_950677328378620_3487526895747999700_o.jpg');
+    background-image: url('../images/amarok.jpg');
     background-size: cover;
 }
 
 #left_contianer {
-    background-image: url('../images/Webp.net-resizeimage\ \(4\).jpg');
+    background-image: url('../images/wildlife-cheetah.jpg');
     background-size: cover;
 }
 
