--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,9 +167,7 @@ a {
 #booking-form-container {
     width: 100%;
     height: auto;
-    position: relative;
-    clear: both;
-    margin-bottom: 10px;
+   
 }
 
 #booking-text {
@@ -179,15 +177,10 @@ a {
 }
 
 form {
-    width: 50%;
-    position: relative;
-    float: left;
-}
-
-#booking-image {
-    position: relative;
-    float: right;
-    margin-right: 10px
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .client-details {
@@ -195,18 +188,13 @@ form {
     text-align: center;
 }
 
+
 input {
     margin-bottom: 10px;
     border-radius: 50px;
     border: 2px solid #777;
     box-sizing: border-box;
-    width: auto;
     padding: 5px;
-}
-
-#request {
-    width: 250px;
-    height: 50px;
 }
 
 button {
